@@ -10,6 +10,8 @@ Incompatible changes
 Features added
 --------------
 
+* #3008: ``linkcheck`` builder ignores self-signed certificate URL
+
 Bugs fixed
 ----------
 
